# nixbox

./: .gitignore  README.md  flake.nix  pyproject.toml
layer1/: config.py  database.py  main.py  models.py  sandbox.py  scheduler.py
layer1/templates/: base.html  index.html
layer1/templates/partials/: stats_grid.html
layer1/templates/tasks/: detail.html  files.html  list.html  logs.html  logs_stream.html  new.html  schedule.html
layer2/: executor.py  orchestrator.py  profile.py
layer2/actions/: __init__.py  base.py  files.py  http.py  sandbox.py
layer2/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
nixbox/: config.py  database.py  main.py  scheduler.py
nixbox/templates/tasks/: list.html  logs.html  new.html  schedule.html
