[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nixbox"
version = "0.1.0"
description = "Sandboxed agent management layer for NixOS"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "apscheduler",
    "python-multipart",
    "aiofiles",
    "aiosqlite",
    "psutil",
]

[project.scripts]
nixbox = "nixbox.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["nixbox*"]

[tool.setuptools.package-data]
nixbox = ["templates/**/*.html"]

[tool.setuptools.package-data]
nixbox = ["templates/**/*.html"]
