[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nixbox"
version = "0.1.0"
description = "Sandboxed agent management layer for NixOS"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "apscheduler",
    "python-multipart",
    "aiofiles",
    "aiosqlite",
    "psutil",
    "httpx",
    "anthropic",
    "openai",
    "google-genai",
    "markdown-it-py",
]

[project.scripts]
nixbox = "layer1.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["layer1*", "layer2*"]

[tool.setuptools.package-data]
layer1 = ["templates/**/*.html"]
